--- a/chatPDF/templates/baseuser.html
+++ b/chatPDF/templates/baseuser.html
@@ -258,32 +258,32 @@
 
 <script>
   // gửi tin nhắn
+  
   const messageInput = document.getElementById("messageInput");
   const sendMessageButton = document.getElementById("sendMessageButton");
   sendMessageButton.addEventListener("click", function () {
     const user_chat = messageInput.value;
-    const bot_chat = "chat chat";
-    const topic_id = "{{topic.id}}";
-    messageInput.value = "";
+    if (user_chat !== "") {
+        const bot_chat = "chat chat";
+        const topic_id = "{{topic.id}}";
+        messageInput.value = "";
+        const userChatDiv = document.createElement("div");
+        userChatDiv.className = "user-chat";
+        userChatDiv.innerHTML = `
+                <div class="chat-tk" style="display: flex; justify-content: flex-end;" id="scrollable-content">
+                    <span class="username">{{ new_name }}</span>
+                </div>
+                <div class="chat-item chat-item-right">
+                  <p class="chat-item-message">
+                    ${user_chat}
+                  <p>
 
-    const userChatDiv = document.createElement("div");
-    userChatDiv.className = "user-chat";
-    userChatDiv.innerHTML = `
-            <div class="chat-tk" style="display: flex; justify-content: flex-end;" id="scrollable-content">
-                <span class="username">{{ new_name }}</span>
-            </div>
-            <div class="chat-item chat-item-right">
-              <p class="chat-item-message">
-                ${user_chat}
-              <p>
-
-            </div>
-        `;
+                </div>
+            `;
     const conversationContainer = document.querySelector(
       ".user-chatPDF-conversation"
     );
     conversationContainer.appendChild(userChatDiv);
-
     const chatChatDiv = document.createElement("div");
     chatChatDiv.className = "chat-chat";
     chatChatDiv.innerHTML = `
@@ -299,6 +299,7 @@
               </div>
     `;
     conversationContainer.appendChild(chatChatDiv);
+            
 
     fetch("/add_conversation", {
       method: "POST",
@@ -326,7 +327,7 @@
             </div>
         `;
       conversationContainer.appendChild(chatChatDiv);
-    });
+    });}
   });
 </script>
 
