--- a/chatPDF/templates/admin.html
+++ b/chatPDF/templates/admin.html
@@ -98,96 +98,134 @@
                       </tbody>
                   </table>
             </div>
-
               <div class="admin-btn d-flex justify-content-end m-5">
                 <button class="btn ml-5 btn-add">Thêm</button>
                 <button class="btn ml-5 btn-close">Xóa</button>
               </div>
-
-        </div>
-        
+        </div>       
         <div class="admin-list">
-            <div class="scroll" id="scrollable-content">
-                <div class="user-chat">
-                    <div class="chat-tk" style="display: flex; justify-content: flex-end;">
-                        <span>HK</span>
-                    </div>
-                    <div class="chat-item"> Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa
-    
-                    </div>
+          <div class="user-chatPDF-conversation scroll" id="scrollable-content">
+              {% for conversation in conversations %}
+              <div class="user-chat">
+                <div class="chat-tk" style="display: flex; justify-content: flex-end;">
+                  <span class="username">
+                     <i class="fa-solid fa-user"></i>
+                  </span>
                 </div>
-                <div class="chat-chat">
-                    <div class="chat-AI">
-                        <span>
-                            <i class="fas fa-comment"></i>
-                        </span>
-                    </div>
-                    <div class="chat-item"> Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa
-    
-                    </div>
+                <div class="chat-item chat-item-right">
+                  <p class="chat-item-message">
+                    {{ conversation.user_chat }}
+                  </p>
                 </div>
-                <div class="user-chat">
-                    <div class="chat-tk" style="display: flex; justify-content: flex-end;">
-                        <span>HK</span>
-                    </div>
-                    <div class="chat-item"> Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa
-    
-                    </div>
+              </div>
+        
+              <div class="chat-chat">
+                <div class="chat-AI">
+                  <span>
+                    <i class="fas fa-comment"></i>
+                  </span>
                 </div>
-                <div class="chat-chat">
-                    <div class="chat-AI">
-                        <span>
-                            <i class="fas fa-comment"></i>
-                        </span>
-                    </div>
-                    <div class="chat-item"> Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa
-    
-                    </div>
+                <div class="chat-item chat-item-left">
+                  <p class="chat-item-messageAI">
+                    {{ conversation.bot_chat }}
+                  </p>
                 </div>
-                <div class="user-chat">
-                    <div class="chat-tk" style="display: flex; justify-content: flex-end;">
-                        <span>HK</span>
-                    </div>
-                    <div class="chat-item"> Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa
-    
-                    </div>
-                </div>
-                <div class="chat-chat">
-                    <div class="chat-AI">
-                        <span>
-                            <i class="fas fa-comment"></i>
-                        </span>
-                    </div>
-                    <div class="chat-item"> Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa Hoang Thi Khuyen Trương dai hoc phenikaa
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex chatPDF-message">
-                <textarea rows="1" placeholder="Send a message" class=""></textarea>
-                <button class="chatPDF-message-btn">
-                    <i class="fas fa-play"></i>
-                </button>
-            </div>
+              </div>      
+              {% endfor %}
+          </div>
+          <div class="chatPDF-message">
+              <textarea id="messageInput" rows="1" placeholder="Send a message" class=""></textarea>
+              <button class="chatPDF-message-btn" id="sendMessageButton">
+                <i class="fas fa-play"></i>
+              </button>
+          </div>
         </div>
     </div>
 </div>
 <script>
-    const $ = document.querySelector.bind(document);
-    const $$ = document.querySelectorAll.bind(document);
-
-    const adminItems = $$(".admin-item");
-    const adminLists = $$(".admin-list");
+    const adminItems = document.querySelectorAll(".admin-item");
+    const adminLists = document.querySelectorAll(".admin-list");
     adminItems.forEach((item, index) => {
       const adList = adminLists[index];
       item.onclick = function () {
-        $(".admin-item.active").classList.remove("active");
-        $(".admin-list.active").classList.remove("active");
+         document.querySelector(".admin-item.active").classList.remove("active");
+         document.querySelector(".admin-list.active").classList.remove("active");
 
         this.classList.add("active");
         adList.classList.add("active");
       };
     });
   </script>
+
+<script>
+  // Gửi tin nhắn
+  const messageInput = document.getElementById('messageInput');
+  const sendMessageButton = document.getElementById('sendMessageButton');
+  const conversationContainer = document.querySelector('.user-chatPDF-conversation');
+
+  sendMessageButton.addEventListener('click', function () {
+    const user_chat = messageInput.value;
+    if (user_chat != ""){
+    const bot_chat = 'chat';
+    messageInput.value = '';
+
+    const userChatDiv = document.createElement('div');
+    userChatDiv.className = 'user-chat';
+    userChatDiv.innerHTML = `
+        <div class="chat-tk" style="display: flex; justify-content: flex-end;" id="scrollable-content">
+          <span class="username">HK</span>
+        </div>
+        <div class="chat-item chat-item-right">
+                <p class="chat-item-message">
+                  ${user_chat}
+                <p>
+              </div>
+      `;
+    conversationContainer.appendChild(userChatDiv);
+
+    const chatChatDiv = document.createElement('div');
+    chatChatDiv.className = 'chat-chat';
+    chatChatDiv.innerHTML = `
+        <div class="chat-AI">
+          <span>
+            <i class="fas fa-comment"></i>
+          </span>
+        </div>
+        
+        <div class="chat-item chat-item-left">
+                <p class="chat-item-messageAI">
+                  <i class="fa-solid fa-spinner fa-spin"></i>
+                <p>
+        </div>
+      `;
+    conversationContainer.appendChild(chatChatDiv);
+
+    fetch('/add_conversation', {
+      method: 'POST',
+      body: JSON.stringify({ user_chat: user_chat }),
+      headers: {
+        'Content-Type': 'application/json'
+      }
+    })
+      .then(response => response.json())
+      .then(data => {
+        chatChatDiv.innerHTML = `
+            <div class="chat-AI">
+              <span>
+                <i class="fas fa-comment"></i>
+              </span>
+            </div>
+            <div class="chat-item chat-item-left">
+                <p class="chat-item-messageAI">
+                  ${data.bot_chat}
+                <p>
+              </div>
+          `;
+        conversationContainer.appendChild(chatChatDiv);   
+      });
+    }
+  });
+</script>
 
   <script>
     var scrollableContent = document.getElementById('scrollable-content')
