--- a/chatPDF/templates/admin.html
+++ b/chatPDF/templates/admin.html
@@ -173,7 +173,9 @@
     userChatDiv.className = 'user-chat';
     userChatDiv.innerHTML = `
         <div class="chat-tk" style="display: flex; justify-content: flex-end;" id="scrollable-content">
-          <span class="username">HK</span>
+          <span class="username">
+            <i class="fa-solid fa-user"></i>
+            </span>
         </div>
         <div class="chat-item chat-item-right">
                 <p class="chat-item-message">
@@ -185,6 +187,7 @@
 
     const chatChatDiv = document.createElement('div');
     chatChatDiv.className = 'chat-chat';
+    conversationContainer.appendChild(chatChatDiv);
     chatChatDiv.innerHTML = `
         <div class="chat-AI">
           <span>
@@ -198,7 +201,6 @@
                 <p>
         </div>
       `;
-    conversationContainer.appendChild(chatChatDiv);
 
     fetch('/add_conversation', {
       method: 'POST',
@@ -207,24 +209,31 @@
         'Content-Type': 'application/json'
       }
     })
-      .then(response => response.json())
+      .then(res => res.json())
       .then(data => {
-        chatChatDiv.innerHTML = `
-            <div class="chat-AI">
-              <span>
-                <i class="fas fa-comment"></i>
-              </span>
-            </div>
-            <div class="chat-item chat-item-left">
-                <p class="chat-item-messageAI">
-                  ${data.bot_chat}
-                <p>
-              </div>
-          `;
-        conversationContainer.appendChild(chatChatDiv);   
+        showResponse(data.bot_chat, chatChatDiv);
+           
       });
     }
   });
+
+  function showResponse(response, chatchatDiv){
+    const words = response.split(' ');
+    let index = 0;
+    const chatItemMessageAI = chatchatDiv.querySelector('.chat-item-left .chat-item-messageAI');
+    function displayWord(){
+      if (index === 0){
+        chatItemMessageAI.innerHTML = words[index];
+      }else{
+        chatItemMessageAI.innerHTML += ' ' + words[index];
+      }
+      index++;
+      if(index < words.length){
+        setTimeout(displayWord, 150)
+      }
+    }
+    displayWord();
+  }
 </script>
 
   <script>
